# wr-analyzer

./: .gitignore  .lfsconfig  CLAUDE.md  README.md  plan.md  pyproject.toml
docs/: glossary.md  overview.md  schema.json
src/wr_analyzer/: __init__.py  __main__.py  analyze.py  champions.py  download.py  game_state.py  kda.py  layout.py  models.py  ocr.py  regions.py  result.py  timer.py  video.py
tests/: conftest.py  extract_fixtures.py  support.py  test_analyze.py  test_champions.py  test_download.py  test_game_state.py  test_kda.py  test_layout.py  test_models.py  test_ocr.py  test_regions.py  test_result.py  test_timer.py  test_video.py
videos/: .gitattributes
