[project]
name = "wr-analyzer"
version = "0.1.0"
description = "Wild Rift gameplay video analyzer"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.9",
"rapidfuzz>=3.0",
    "yt-dlp>=2024.0",
    "easyocr>=1.7.2",
]

[project.scripts]
wr-analyzer = "wr_analyzer.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wr_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
